tasks/testsuite/fixtures/parser-misc/pass/stmt-issue-380-2.js
class Foo {
                componentDidMount() {
                    const filePath = '../foo/bar'
                    import(filePath).then(bar => {})
                }
            }