tasks/testsuite/fixtures/parser-misc/fail/stmt-class-static-blocks-with-await.js
class Foo{
            static {
                var await = 'bar';
            }
        }